--- a/stylesheet.css
+++ b/stylesheet.css
@@ -170,6 +170,7 @@
   background-color: #ff5733;
 }
 
+/* -- !!!make it responsive!!! -- */
 @media only screen and (max-width: 800px) {
   .container {
     flex-direction: column;
